name:                   stripe-http-conduit
version:                0.1.0.0
synopsis:               Access Stripe API using http-conduit
homepage:               https://github.com/whittle/stripe-http-conduit
license:                BSD3
license-file:           LICENSE
author:                 Jason Whittle
maintainer:             jason.whittle@gmail.com
copyright:              Copyright (c) 2016 Jason A. Whittle
category:               Web
build-type:             Simple
cabal-version:          >=1.10
description:            Please see README.md

extra-source-files:     LICENSE
                      , stack.yaml

library
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  exposed-modules:      Lib

source-repository head
  type:                 git
  location:             https://github.com/whittle/stripe-http-conduit
