name:                   stripe-http-conduit
version:                0.1.0.0
synopsis:               Access Stripe API using http-conduit
homepage:               https://github.com/whittle/stripe-http-conduit
license:                BSD3
license-file:           LICENSE
author:                 Jason Whittle
maintainer:             jason.whittle@gmail.com
copyright:              Copyright (c) 2016 Jason A. Whittle
category:               Web
build-type:             Simple
cabal-version:          >=1.10
description:            Please see README.md

extra-source-files:     LICENSE
                      , stack.yaml

library
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       src
  build-depends:        base >= 4.7 && < 5
                      , aeson >= 0.11
                      , conduit >= 1.2
                      , conduit-extra >= 1.1
                      , data-default >= 0.5
                      , http-conduit >= 2.1
                      , http-types >= 0.9
                      , resourcet >= 1.1
                      , stripe-core >= 2.0
                      , text >= 1.2
  exposed-modules:      Web.Stripe.Client.HttpConduit

test-suite tests
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       tests
  build-depends:        base >= 4.7 && < 5
                      , free >= 4.12
                      , http-conduit >= 2.1
                      , stripe-core >= 2.0
                      , stripe-tests >= 2.0
                      , stripe-http-conduit
  main-is:              Main.hs

source-repository head
  type:                 git
  location:             https://github.com/whittle/stripe-http-conduit
